# src/modules/food/route.ts
@@ -1,7 +1,6 @@
 import { Router } from 'express'
 import foodController from './controller'
 import { param } from 'express-validator'
-import { authenticateToken } from '../user-auth/middleware'
 
 const foodRoutes = Router()
 
@@ -11,7 +10,5 @@ const getPortionsValidationRules = [
   param('food_id').exists().withMessage('Please specify food id')
 ]
 foodRoutes.get('/:food_id/portions', getPortionsValidationRules, foodController.getPortions)
-
-foodRoutes.get('/predict', authenticateToken, foodController.getSignedUrl)
 
 export default foodRoutes
